--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,11 +1,11 @@
-#app{
+#app {
   padding: 0;
   margin: 0;
-  width: 95vw;
+  width: 100vw;
   height: 100vh;
   overflow: hidden;
 }
 
-iframe{
-  display: none !important;
+html.dark .univer-theme {
+  color: black;
 }
